Fixed overlapinng elements

--- a/src/App.css
+++ b/src/App.css
@@ -239,9 +239,16 @@ font-style: italic;
   #card {
     width: 14rem;
     margin: 60px;
-
     
   }
+
+  #sug--list > li {
+    padding: 2px;
+    padding-bottom: 10px;
+    color: #0a4ccf;
+    cursor: pointer;
+  }
+  
 
 }
 
